@@ -1,3 +1,14 @@
+2012-10-11  Jay Civelli  <jcivelli@chromium.org>
+
+        Fix for a crasher when generating MHTML for a page containing SVG images.
+        https://bugs.webkit.org/show_bug.cgi?id=99105
+
+        Reviewed by Adam Barth.
+
+        * page/PageSerializer.cpp:
+        (WebCore::PageSerializer::serializeCSSStyleSheet):
+        (WebCore::PageSerializer::addImageToResources):
+
 2012-10-11  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r131107.
